--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,3 +5,9 @@ ktor:
         modules: [com.example.ApplicationKt.module]
 jwt:
     secret: "dSgUkXp2s5v8y/B?E(H+MbQeThWmYq3t"
+mongo:
+    address: "mongodb+srv://testUser:testUser@cluster0.r3hsl.mongodb.net/?retryWrites=true&w=majority"
+    database:
+        name: "test-db"
+        collections:
+            user: "user-collection"
