--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,6 @@ ktor_version=2.2.2
 kotlin_version=1.8.0
 logback_version=1.2.11
 kotlin.code.style=official
+
+projectVersion=0.0.1
+projectGroup=com.example
