--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
-ktor_version=2.2.2
-kotlin_version=1.8.0
-logback_version=1.2.11
+ktorVersion=2.2.2
+kotlinVersion=1.8.0
+mongoDriverVersion=3.12.11
+logbackVersion=1.2.11
 kotlin.code.style=official
 
 projectVersion=0.0.1
