ci: avoided workflow execution for certain commit
avoid workflow execution for commit that contains only  docs files or gitignore or license file

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - dev
+    paths-ignore: 
+      - '.gitignore'
+      - 'LICENSE'
+      - '**.md'
+      - '**.http'
 
 jobs:
   build:
