--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -30,4 +30,5 @@ jobs:
         with:
           push: true
           context: ../../Docker/
+          file: ../../Docker/Dockerfile
           tags: antonioiannotta26/personal26:v1
