--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -29,6 +29,6 @@ jobs:
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           push: true
-          context: ../../Docker/
+          context: ../../Docker
           file: ../../Docker/Dockerfile
           tags: antonioiannotta26/personal26:v1
