--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -6,7 +6,7 @@ EXPOSE 8888/tcp
 # Necessario creare il Jar, portarlo sulla macchina virtuale ubuntu e lanciarlo
 RUN apk update
 RUN apk add git
-RUN apt add snapd
+RUN apk add snapd
 RUN apk add default-jre
 RUN snap install --classic kotlin
 RUN git clone https://github.com/antonioIannotta/parking-system-backend.git
