--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,11 +1,13 @@
-FROM alpine:3.9
+FROM ubuntu:22.04
 
 
 EXPOSE 8888/tcp
 
 # Necessario creare il Jar, portarlo sulla macchina virtuale ubuntu e lanciarlo
-RUN apk update
-RUN apk add git
+RUN apt update
+RUN apt install git
+RUN apt install snapd
+RUN apt install default-jre
 RUN snap install --classic kotlin
 RUN git clone https://github.com/antonioIannotta/parking-system-backend.git
 RUN cd parking-system-backend
