--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -5,10 +5,10 @@ EXPOSE 8888/tcp
 
 # Necessario creare il Jar, portarlo sulla macchina virtuale ubuntu e lanciarlo
 RUN apt update
-RUN apt install git
-RUN apt install snapd
-RUN apt install default-jre
-RUN snap install --classic kotlin
+RUN apt install -y git
+RUN apt install -y snapd
+RUN apt install -y default-jre
+RUN snap install -y --classic kotlin
 RUN git clone https://github.com/antonioIannotta/parking-system-backend.git
 RUN cd parking-system-backend
 RUN git checkout -b master
