--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -8,7 +8,7 @@ RUN apt update
 RUN apt install -y git
 RUN apt install -y snapd
 RUN apt install -y default-jre
-RUN snap install --classic kotlin
+RUN snap install kotlin --classic
 RUN git clone https://github.com/antonioIannotta/parking-system-backend.git
 RUN cd parking-system-backend
 RUN git checkout -b master
