--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -10,7 +10,7 @@ RUN apt install -y snapd
 RUN apt install -y default-jre
 RUN apt install -y kotlin
 RUN git clone https://github.com/antonioIannotta/parking-system-backend.git
-RUN cd parking-system-backend
+WORKDIR parking-system-backend
 RUN git checkout master
 RUN kotlinc src/Application.kt -include-runtime -d Application.jar
 RUN java -jar Application.jar
