--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:22.04
 
 
-EXPOSE 8888/tcp
+EXPOSE 8080/tcp
 
 # Necessario creare il Jar, portarlo sulla macchina virtuale ubuntu e lanciarlo
 RUN apt update
@@ -13,8 +13,8 @@ RUN git clone https://github.com/antonioIannotta/parking-system-backend.git
 WORKDIR parking-system-backend
 RUN git checkout master
 RUN ./gradlew build
-WORKDIR src/main/kotlin/it/unibo/lss/parking_system/framework
-RUN kotlinc Application.kt -include-runtime -d Application.jar
+#WORKDIR src/main/kotlin/it/unibo/lss/parking_system/framework
+#RUN kotlinc Application.kt -include-runtime -d Application.jar
 #RUN kotlinc src/main/kotlin/it/unibo/lss/parking_system/framework/Application.kt -include-runtime -d Application.jar
-RUN java -jar Application.jar
-
+#RUN java -jar Application.jar
+RUN ./gradlew run
