--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 ktorVersion=2.2.4
 kotlinVersion=1.8.10
+kotlinDateTimeVersion=0.4.0
 mongoDriverVersion=4.9.0
 logbackVersion=1.4.5
 kotlin.code.style=official
