chore(deps): update junit to 5.9.2

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ kotlinVersion=1.8.10
 kotlinDateTimeVersion=0.4.0
 mongoDriverVersion=4.9.0
 logbackVersion=1.4.5
+jUnitVersion=5.9.2
 kotlin.code.style=official
 
 projectVersion=0.0.1
