--- a/.github/workflows/check_pr.yml
+++ b/.github/workflows/check_pr.yml
@@ -15,6 +15,10 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: zulu
       - name: Setup and execute Gradle 'test' task
         uses: gradle/gradle-build-action@v2
         with:
