--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ kotlinxDateTime = "0.4.0"
 mongoDbDriver = "4.9.0"
 logbackClassic = "1.4.5"
 junit = "5.9.2"
-
+buildconfig = "4.0.4"
 [libraries]
 mongodb-driver-sync = { group = "org.mongodb", name = "mongodb-driver-sync", version.ref = "mongoDbDriver" }
 logback-classic = { group = "ch.qos.logback", name = "logback-classic", version.ref = "logbackClassic" }
@@ -29,3 +29,4 @@ junit = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "ju
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 ktor-plugin = { id = "io.ktor.plugin", version.ref = "ktor" }
 kotlin-plugin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+buildconfig = { id = "com.github.gmazzo.buildconfig", version.ref = "buildconfig"}
