--- a/.github/workflows/check_pr.yml
+++ b/.github/workflows/check_pr.yml
@@ -10,16 +10,14 @@ jobs:
     name: Run tests
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
         mongodb-version: ['5.3', '6.0']
     runs-on: ${{matrix.os}}
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
-      - name: Start MongoDB
-        uses: supercharge/mongodb-github-action@1.8.0
-        with:
-          mongodb-version: ${{ matrix.mongodb-version }}
+      - name: Run MongoDB
+        run: docker run --name mongo -d -p 27017:27017 mongo:${{ matrix.mongodb-version }}
       - uses: actions/setup-java@v3
         with:
           java-version: 17
