--- a/.github/workflows/check_pr.yml
+++ b/.github/workflows/check_pr.yml
@@ -17,7 +17,9 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v3
       - name: Run MongoDB
-        run: docker run --name mongo -d -p 27017:27017 mongo:${{ matrix.mongodb-version }}
+        uses: supercharge/mongodb-github-action@1.8.0
+        with:
+          mongodb-version: ${{ matrix.mongodb-version }}
       - uses: actions/setup-java@v3
         with:
           java-version: 17
