--- a/.github/workflows/check_pr.yml
+++ b/.github/workflows/check_pr.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        mongodb-version: ['5.3', '6.0']
+        mongodb-version: ['4.4', '5.0', '6.0']
     runs-on: ${{matrix.os}}
     steps:
       - name: Check out the repo
