--- a/.github/workflows/check_pr.yml
+++ b/.github/workflows/check_pr.yml
@@ -10,9 +10,8 @@ jobs:
     name: Run tests
     strategy:
       matrix:
-        os: [ubuntu-latest]
         mongodb-version: ['4.4', '5.0', '6.0']
-    runs-on: ${{matrix.os}}
+    runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -28,3 +27,20 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           arguments: test
+  assembly-tests:
+    name: Assembly test
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{matrix.os}}
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: zulu
+      - name: Setup and execute Gradle 'assembly' task
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: assembly
