--- a/.github/workflows/check_pr.yml
+++ b/.github/workflows/check_pr.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           arguments: test
   assembly-tests:
-    name: Assembly test
+    name: Assemble test
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
@@ -40,7 +40,7 @@ jobs:
         with:
           java-version: 17
           distribution: zulu
-      - name: Setup and execute Gradle 'assembly' task
+      - name: Setup and execute Gradle 'assemble' task
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: assembly
+          arguments: assemble
