--- a/.github/workflows/release_please.yml
+++ b/.github/workflows/release_please.yml
@@ -25,6 +25,7 @@ jobs:
   push_image_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
+    needs: release_please
     if: ${{ needs.release_please.outputs.release_created }}
     steps:
       - uses: actions/checkout@v3
