feat: added Dokka to create documentation

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ mongoDbDriver = "4.9.1"
 logbackClassic = "1.4.7"
 junit = "5.9.3"
 buildconfig = "4.0.4"
+dokka = "1.8.10"
 [libraries]
 mongodb-driver-sync = { group = "org.mongodb", name = "mongodb-driver-sync", version.ref = "mongoDbDriver" }
 logback-classic = { group = "ch.qos.logback", name = "logback-classic", version.ref = "logbackClassic" }
@@ -29,4 +30,5 @@ junit = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "ju
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 ktor-plugin = { id = "io.ktor.plugin", version.ref = "ktor" }
 kotlin-plugin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-buildconfig = { id = "com.github.gmazzo.buildconfig", version.ref = "buildconfig"}
+buildconfig = { id = "com.github.gmazzo.buildconfig", version.ref = "buildconfig"}dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
+dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
