--- a/.github/workflows/release_please.yml
+++ b/.github/workflows/release_please.yml
@@ -46,3 +46,22 @@ jobs:
           push: true
           file: ./Docker/Dockerfile
           tags: giuliozaccaroni/smart-parking-backend:latest,giuliozaccaroni/smart-parking-backend:${{ needs.release_please.outputs.release_version }}
+  publish_to_maven:
+    name: Publish to Maven Central
+    runs-on: ubuntu-latest
+    needs: release_please
+    if: ${{ needs.release_please.outputs.release_created }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: zulu
+      - name: Upload to Maven Central
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: uploadKotlinOSSRHToMavenCentralNexus
+      - name: Release on Maven Centrals
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: releaseStagingRepositoryOnMavenCentral
