fix: fixed maven release pipeline

--- a/.github/workflows/release_please.yml
+++ b/.github/workflows/release_please.yml
@@ -61,6 +61,9 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           arguments: uploadKotlinOSSRHToMavenCentralNexus
+        env:
+          SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
+          SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
       - name: Release on Maven Centrals
         uses: gradle/gradle-build-action@v2
         with:
